--- a/about/index.html
+++ b/about/index.html
@@ -15,16 +15,16 @@
 <meta name=twitter:card content="summary">
 <meta name=twitter:title content="About">
 <meta name=twitter:description content>
-<link rel=stylesheet type=text/css media=screen href=https://suryansh011.github.iocss/normalize.css>
-<link rel=stylesheet type=text/css media=screen href=https://suryansh011.github.iocss/main.css>
-<link id=dark-scheme rel=stylesheet type=text/css href=https://suryansh011.github.iocss/dark.css>
-<script src=https://suryansh011.github.iojs/feather.min.js></script>
-<script src=https://suryansh011.github.iojs/main.js></script>
+<link rel=stylesheet type=text/css media=screen href=https://suryansh011.github.io/css/normalize.css>
+<link rel=stylesheet type=text/css media=screen href=https://suryansh011.github.io/css/main.css>
+<link id=dark-scheme rel=stylesheet type=text/css href=https://suryansh011.github.io/css/dark.css>
+<script src=https://suryansh011.github.io/js/feather.min.js></script>
+<script src=https://suryansh011.github.io/js/main.js></script>
 </head>
 <body>
 <div class="container wrapper">
 <div class=header>
-<h1 class=site-title><a href=https://suryansh011.github.io>Suryansh-Shishodia</a></h1>
+<h1 class=site-title><a href=https://suryansh011.github.io/>Suryansh-Shishodia</a></h1>
 <div class=site-description><p>computers and more</p><nav class="nav social">
 <ul class=flat><li><a href=https://github.com/suryansh011/ title=Github><i data-feather=github></i></a></li><li><a href=/index.xml title=RSS><i data-feather=rss></i></a></li></ul>
 </nav>
@@ -66,7 +66,7 @@
 <a href=https://github.com/suryansh011//blob/master/content/about.md title=github><i data-feather=github></i> Edit this on GitHub</a>
 </div>
 <div class=back>
-<a href=https://suryansh011.github.io><span aria-hidden=true>← Back</span></a>
+<a href=https://suryansh011.github.io/><span aria-hidden=true>← Back</span></a>
 </div>
 <div class=back>
 </div></div>
