--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!doctype html><head>
 <meta name=generator content="Hugo 0.92.0">
 <meta charset=utf-8>
-<meta http-equiv=x-ua-compatible content="IE=edge"><title>Suryansh-Shishodia - computers and more </title><meta name=viewport content="width=device-width,initial-scale=1">
-<link rel=alternate type=application/rss+xml href=https://suryansh011.github.io/index.xml title=Suryansh-Shishodia>
-<meta itemprop=name content="Suryansh-Shishodia">
-<meta itemprop=description content><meta property="og:title" content="Suryansh-Shishodia">
+<meta http-equiv=x-ua-compatible content="IE=edge"><title>Suryansh Shishodia - computers and more </title><meta name=viewport content="width=device-width,initial-scale=1">
+<link rel=alternate type=application/rss+xml href=https://suryansh011.github.io/index.xml title="Suryansh Shishodia">
+<meta itemprop=name content="Suryansh Shishodia">
+<meta itemprop=description content><meta property="og:title" content="Suryansh Shishodia">
 <meta property="og:description" content>
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://suryansh011.github.io/">
 <meta name=twitter:card content="summary">
-<meta name=twitter:title content="Suryansh-Shishodia">
+<meta name=twitter:title content="Suryansh Shishodia">
 <meta name=twitter:description content>
 <link rel=stylesheet type=text/css media=screen href=https://suryansh011.github.io/css/normalize.css>
 <link rel=stylesheet type=text/css media=screen href=https://suryansh011.github.io/css/main.css>
@@ -20,7 +20,7 @@
 <body>
 <div class="container wrapper">
 <div class=header>
-<h1 class=site-title><a href=https://suryansh011.github.io/>Suryansh-Shishodia</a></h1>
+<h1 class=site-title><a href=https://suryansh011.github.io/>Suryansh Shishodia</a></h1>
 <div class=site-description><p>computers and more</p><nav class="nav social">
 <ul class=flat><li><a href=https://github.com/suryansh011/ title=Github><i data-feather=github></i></a></li><li><a href=/index.xml title=RSS><i data-feather=rss></i></a></li></ul>
 </nav>
