deploy: c92fdf25c14f8cd65f79e1ca2be3597c7070d341

--- a/about/index.html
+++ b/about/index.html
@@ -4,17 +4,20 @@
 <meta http-equiv=x-ua-compatible content="IE=edge"><title>About - Suryansh Shishodia</title><meta name=viewport content="width=device-width,initial-scale=1">
 <meta itemprop=name content="About">
 <meta itemprop=description content="Hello! I&rsquo;m Suryansh Singh Shishodia, I&rsquo;m a computer and technology enthusiast.
-Currently I&rsquo;m pursuing a degree in Computer Science and Engineering.">
+Currently I&rsquo;m pursuing a degree in Computer Science and Engineering.
+ ">
 <meta itemprop=wordCount content="21">
 <meta itemprop=keywords content><meta property="og:title" content="About">
 <meta property="og:description" content="Hello! I&rsquo;m Suryansh Singh Shishodia, I&rsquo;m a computer and technology enthusiast.
-Currently I&rsquo;m pursuing a degree in Computer Science and Engineering.">
+Currently I&rsquo;m pursuing a degree in Computer Science and Engineering.
+ ">
 <meta property="og:type" content="article">
 <meta property="og:url" content="https://suryansh011.github.io/about/"><meta property="article:section" content>
 <meta name=twitter:card content="summary">
 <meta name=twitter:title content="About">
 <meta name=twitter:description content="Hello! I&rsquo;m Suryansh Singh Shishodia, I&rsquo;m a computer and technology enthusiast.
-Currently I&rsquo;m pursuing a degree in Computer Science and Engineering.">
+Currently I&rsquo;m pursuing a degree in Computer Science and Engineering.
+ ">
 <link rel=stylesheet type=text/css media=screen href=https://suryansh011.github.io/css/normalize.css>
 <link rel=stylesheet type=text/css media=screen href=https://suryansh011.github.io/css/main.css>
 <link id=dark-scheme rel=stylesheet type=text/css href=https://suryansh011.github.io/css/dark.css>
@@ -52,6 +55,7 @@ Currently I&rsquo;m pursuing a degree in Computer Science and Engineering.">
 <div class=markdown>
 <p>Hello! I&rsquo;m Suryansh Singh Shishodia, I&rsquo;m a computer and technology enthusiast.</p>
 <p>Currently I&rsquo;m pursuing a degree in Computer Science and Engineering.</p>
+<hr>
 </div>
 <div class=tags>
 </div>
