--- a/about/index.html
+++ b/about/index.html
@@ -5,19 +5,19 @@
 <meta itemprop=name content="About">
 <meta itemprop=description content="Hello! I&rsquo;m Suryansh Singh Shishodia, I&rsquo;m a computer and technology enthusiast.
 Currently I&rsquo;m pursuing a degree in Computer Science and Engineering.
-PGP Public Key  My PGP Key as of 2022: mykey.asc">
-<meta itemprop=wordCount content="31">
+Public Key  My PGP Key as of 2022: mykey.asc">
+<meta itemprop=wordCount content="30">
 <meta itemprop=keywords content><meta property="og:title" content="About">
 <meta property="og:description" content="Hello! I&rsquo;m Suryansh Singh Shishodia, I&rsquo;m a computer and technology enthusiast.
 Currently I&rsquo;m pursuing a degree in Computer Science and Engineering.
-PGP Public Key  My PGP Key as of 2022: mykey.asc">
+Public Key  My PGP Key as of 2022: mykey.asc">
 <meta property="og:type" content="article">
 <meta property="og:url" content="https://suryansh011.github.io/about/"><meta property="article:section" content>
 <meta name=twitter:card content="summary">
 <meta name=twitter:title content="About">
 <meta name=twitter:description content="Hello! I&rsquo;m Suryansh Singh Shishodia, I&rsquo;m a computer and technology enthusiast.
 Currently I&rsquo;m pursuing a degree in Computer Science and Engineering.
-PGP Public Key  My PGP Key as of 2022: mykey.asc">
+Public Key  My PGP Key as of 2022: mykey.asc">
 <link rel=stylesheet type=text/css media=screen href=https://suryansh011.github.io/css/normalize.css>
 <link rel=stylesheet type=text/css media=screen href=https://suryansh011.github.io/css/main.css>
 <link id=dark-scheme rel=stylesheet type=text/css href=https://suryansh011.github.io/css/dark.css>
@@ -55,9 +55,9 @@ PGP Public Key  My PGP Key as of 2022: mykey.asc">
 <div class=markdown>
 <p>Hello! I&rsquo;m Suryansh Singh Shishodia, I&rsquo;m a computer and technology enthusiast.</p>
 <p>Currently I&rsquo;m pursuing a degree in Computer Science and Engineering.</p>
-<h2 id=pgp-public-key>PGP Public Key</h2>
+<h2 id=public-key>Public Key</h2>
 <hr>
-<p>My <strong>PGP Key</strong> as of 2022: <a href=%22https://suryansh011.github.io/mykey.asc.txt%22 title=mykey.asc>mykey.asc</a></p>
+<p>My <strong>PGP Key</strong> as of 2022: <a href=https://suryansh011.github.io/mykey.asc.txt title=mykey.asc>mykey.asc</a></p>
 </div>
 <div class=tags>
 </div>
