deploy: 2bce54f26ddec71a9b59d468ae4f999faeb4c69e

--- a/about/index.html
+++ b/about/index.html
@@ -57,7 +57,7 @@ Public Key  My PGP Key as of 2022: mykey.asc">
 <p>Currently I&rsquo;m pursuing a degree in Computer Science and Engineering.</p>
 <h2 id=public-key>Public Key</h2>
 <hr>
-<p>My <strong>PGP Key</strong> as of 2022: <a href=https://suryansh011.github.io/mykey.asc.txt title=mykey.asc>mykey.asc</a></p>
+<p>My <strong>PGP Key</strong> as of 2022: <a href=https://suryansh011.github.io/mykey.asc title=mykey.asc>mykey.asc</a></p>
 </div>
 <div class=tags>
 </div>
