deploy: 30eb058ca128bd3f95d4b5f04d7f06242d361c9b

--- a/home/index.html
+++ b/home/index.html
@@ -1,20 +1,20 @@
 <!doctype html><html>
 <head>
 <meta charset=utf-8>
-<meta http-equiv=x-ua-compatible content="IE=edge"><title>About - Suryansh Shishodia</title><meta name=viewport content="width=device-width,initial-scale=1">
-<meta itemprop=name content="About">
+<meta http-equiv=x-ua-compatible content="IE=edge"><title> - Suryansh Shishodia</title><meta name=viewport content="width=device-width,initial-scale=1">
+<meta itemprop=name content>
 <meta itemprop=description content="Hello! I&rsquo;m Suryansh Singh Shishodia, I&rsquo;m a computer and technology enthusiast.
 Currently I&rsquo;m pursuing a degree in Computer Science and Engineering.
 Public Key  My PGP Key as of 2022: mykey.asc">
 <meta itemprop=wordCount content="30">
-<meta itemprop=keywords content><meta property="og:title" content="About">
+<meta itemprop=keywords content><meta property="og:title" content>
 <meta property="og:description" content="Hello! I&rsquo;m Suryansh Singh Shishodia, I&rsquo;m a computer and technology enthusiast.
 Currently I&rsquo;m pursuing a degree in Computer Science and Engineering.
 Public Key  My PGP Key as of 2022: mykey.asc">
 <meta property="og:type" content="article">
-<meta property="og:url" content="https://suryansh011.github.io/about/"><meta property="article:section" content>
+<meta property="og:url" content="https://suryansh011.github.io/home/"><meta property="article:section" content>
 <meta name=twitter:card content="summary">
-<meta name=twitter:title content="About">
+<meta name=twitter:title content>
 <meta name=twitter:description content="Hello! I&rsquo;m Suryansh Singh Shishodia, I&rsquo;m a computer and technology enthusiast.
 Currently I&rsquo;m pursuing a degree in Computer Science and Engineering.
 Public Key  My PGP Key as of 2022: mykey.asc">
@@ -46,7 +46,7 @@ Public Key  My PGP Key as of 2022: mykey.asc">
 <div class=post>
 <div class=post-header>
 <div class=matter>
-<h1 class=title>About</h1>
+<h1 class=title></h1>
 </div>
 </div>
 <div class=markdown>
