--- a/about/index.html
+++ b/about/index.html
@@ -1,73 +1,8 @@
-<!doctype html><html>
-<head>
-<meta charset=utf-8>
-<meta http-equiv=x-ua-compatible content="IE=edge"><title>About - Suryansh Shishodia</title><meta name=viewport content="width=device-width,initial-scale=1">
-<meta itemprop=name content="About">
-<meta itemprop=description content="Hello! I&rsquo;m Suryansh Singh Shishodia, I&rsquo;m a computer and technology enthusiast.
+<!doctype html><html><head><meta charset=utf-8><meta http-equiv=x-ua-compatible content="IE=edge"><title>About - Suryansh Shishodia</title><meta name=viewport content="width=device-width,initial-scale=1"><meta itemprop=name content="About"><meta itemprop=description content="Hello! I&rsquo;m Suryansh Singh Shishodia, I&rsquo;m a computer and technology enthusiast.
 Currently I&rsquo;m pursuing a degree in Computer Science and Engineering.
-Public Key  My PGP Key as of 2022: mykey.asc">
-<meta itemprop=wordCount content="30">
-<meta itemprop=keywords content><meta property="og:title" content="About">
-<meta property="og:description" content="Hello! I&rsquo;m Suryansh Singh Shishodia, I&rsquo;m a computer and technology enthusiast.
+Public Key  My PGP Key as of 2022: mykey.asc"><meta itemprop=wordCount content="30"><meta itemprop=keywords content><meta property="og:title" content="About"><meta property="og:description" content="Hello! I&rsquo;m Suryansh Singh Shishodia, I&rsquo;m a computer and technology enthusiast.
 Currently I&rsquo;m pursuing a degree in Computer Science and Engineering.
-Public Key  My PGP Key as of 2022: mykey.asc">
-<meta property="og:type" content="article">
-<meta property="og:url" content="https://suryansh011.github.io/about/"><meta property="article:section" content>
-<meta name=twitter:card content="summary">
-<meta name=twitter:title content="About">
-<meta name=twitter:description content="Hello! I&rsquo;m Suryansh Singh Shishodia, I&rsquo;m a computer and technology enthusiast.
+Public Key  My PGP Key as of 2022: mykey.asc"><meta property="og:type" content="article"><meta property="og:url" content="https://suryansh011.github.io/about/"><meta property="article:section" content><meta name=twitter:card content="summary"><meta name=twitter:title content="About"><meta name=twitter:description content="Hello! I&rsquo;m Suryansh Singh Shishodia, I&rsquo;m a computer and technology enthusiast.
 Currently I&rsquo;m pursuing a degree in Computer Science and Engineering.
-Public Key  My PGP Key as of 2022: mykey.asc">
-<link rel=stylesheet type=text/css media=screen href=https://suryansh011.github.io/css/normalize.css>
-<link rel=stylesheet type=text/css media=screen href=https://suryansh011.github.io/css/main.css>
-<link id=dark-scheme rel=stylesheet type=text/css href=https://suryansh011.github.io/css/dark.css>
-<script src=https://suryansh011.github.io/js/feather.min.js></script>
-<script src=https://suryansh011.github.io/js/main.js></script>
-</head>
-<body>
-<div class="container wrapper">
-<div class=header>
-<h1 class=site-title><a href=https://suryansh011.github.io/>Suryansh Shishodia</a></h1>
-<div class=site-description><p>computers and more</p><nav class="nav social">
-<ul class=flat><li><a href=https://github.com/suryansh011/ title=Github><i data-feather=github></i></a></li><li><a href=/index.xml title=RSS><i data-feather=rss></i></a></li></ul>
-</nav>
-</div>
-<nav class=nav>
-<ul class=flat>
-<li>
-<a href=/>Home</a>
-</li>
-<li>
-<a href=/about>About</a>
-</li>
-</ul>
-</nav>
-</div>
-<div class=post>
-<div class=post-header>
-<div class=matter>
-<h1 class=title>About</h1>
-</div>
-</div>
-<div class=markdown>
-<p>Hello! I&rsquo;m Suryansh Singh Shishodia, I&rsquo;m a computer and technology enthusiast.</p>
-<p>Currently I&rsquo;m pursuing a degree in Computer Science and Engineering.</p>
-<h2 id=public-key>Public Key</h2>
-<hr>
-<p>My <strong>PGP Key</strong> as of 2022: <a href=https://suryansh011.github.io/mykey.asc title=mykey.asc>mykey.asc</a></p>
-</div>
-<div class=tags>
-</div>
-<div class=back>
-<a href=https://suryansh011.github.io/><span aria-hidden=true>← Back</span></a>
-</div>
-<div class=back>
-</div></div>
-</div>
-<div class="footer wrapper">
-<nav class=nav>
-<div>1 © Suryansh Singh Shishodia
-</nav>
-</div><script>feather.replace()</script>
-</body>
-</html>
+Public Key  My PGP Key as of 2022: mykey.asc"><link rel=stylesheet type=text/css media=screen href=https://suryansh011.github.io/css/normalize.css><link rel=stylesheet type=text/css media=screen href=https://suryansh011.github.io/css/main.css><link id=dark-scheme rel=stylesheet type=text/css href=https://suryansh011.github.io/css/dark.css><script src=https://suryansh011.github.io/js/feather.min.js></script>
+<script src=https://suryansh011.github.io/js/main.js></script></head><body><div class="container wrapper"><div class=header><h1 class=site-title><a href=https://suryansh011.github.io/>Suryansh Shishodia</a></h1><div class=site-description><p>computers and more</p><nav class="nav social"><ul class=flat><li><a href=https://github.com/suryansh011/ title=Github><i data-feather=github></i></a></li><li><a href=/index.xml title=RSS><i data-feather=rss></i></a></li></ul></nav></div><nav class=nav><ul class=flat><li><a href=/>Home</a></li><li><a href=/about>About</a></li></ul></nav></div><div class=post><div class=post-header><div class=matter><h1 class=title>About</h1></div></div><div class=markdown><p>Hello! I&rsquo;m Suryansh Singh Shishodia, I&rsquo;m a computer and technology enthusiast.</p><p>Currently I&rsquo;m pursuing a degree in Computer Science and Engineering.</p><h2 id=public-key>Public Key</h2><hr><p>My <strong>PGP Key</strong> as of 2022: <a href=https://suryansh011.github.io/mykey.asc title=mykey.asc>mykey.asc</a></p></div><div class=tags></div><div class=back><a href=https://suryansh011.github.io/><span aria-hidden=true>← Back</span></a></div><div class=back></div></div></div><div class="footer wrapper"><nav class=nav><div>1 © Suryansh Singh Shishodia</nav></div><script>feather.replace()</script></body></html>
